--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
     text-align: center;
     list-style: none;
   }
+
 html,body{
   width:100%;
   height:100%;
@@ -13,8 +14,18 @@ html,body{
   padding: 0;
   overflow-x: hidden;
 }
-  
-  
+  header {
+text-align: center;
+background-color: #dc1780;
+color: white;
+padding:50px;
+  }
+#MQ {
+font-size: 48px;
+margin-bottom: 30px;
+font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
   .Navbar a {
     float: left;
     color: #f2f2f2;
@@ -56,7 +67,7 @@ height: 100%;
 }
 
 #footer{
-    background-color: aqua;
+    background-color: rgb(77, 155, 240);
     position: relative;
     height: 100px;
     margin-top: -100px;
